--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://topgrupostele.com.br/" />
     
+    <!-- Hreflang for language/region targeting -->
+    <link rel="alternate" hreflang="pt-BR" href="https://topgrupostele.com.br/" />
+    <link rel="alternate" hreflang="pt" href="https://topgrupostele.com.br/" />
+    <link rel="alternate" hreflang="x-default" href="https://topgrupostele.com.br/" />
+    
     <meta name="theme-color" content="#0ea5e9" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
